src/components/home/Banner.module.scss
@import "~theme/colors";
@import "~theme/screens";

.banner {
    min-height: 100vh;
    padding-bottom: 50px;
    background-color: $primary;

    @include md {
        min-height: 700px;
    }
}

.logo {
    padding-top: 50px;
    display: block;
    margin-left: 15%;

    width: 150px;
    max-width: 70%;

    filter: brightness(0);

    @include md {
        margin: 0 auto;
    }

    @include sm {
        position: inherit;
        padding: 0;
        width: 200px;
        height: 145px;
    }
}

.menu {
    text-decoration: none;

    display: inline;
    float: right;
    margin-right: 15%;
    margin-top: -25px;

    @include md {
        margin: 10px auto auto;
        float: none;
        text-align: center;
        display: inline-block;
        width: 100%;
    }

    .menuItem {
        text-decoration: none;
        color: $black;
        font-size: 1em;
        font-weight: 500;
        color: $black;
        margin-left: 15px;

        @include md {
            margin: 10px;
        }
    }
}

.header {
    margin: 150px auto auto;
    text-align: center;
    left: 0;
    right: 0;
    font-size: 5em;
    font-weight: 700;
    letter-spacing: -3px;
    line-height: 1em;
    width: 800px;

    @include md {
        margin-top: 80px;
        font-size: 3em;
        width: 60%;
        overflow-wrap: break-word;
    }

    @include dark {
        color: $black;
    }

    .subheader {
        font-size: 0.4em;
        font-weight: 500;
        width: 500px;
        margin-right: auto;
        margin-left: auto;
        letter-spacing: -0.05em;
        line-height: 0.9em;
        display: block;

        @include md {
            width: 70%;
            line-height: -15em;
        }
    }
}

.scrollDown {
    text-align: center;
    margin-left: auto;
    margin-right: auto;

    background: $primary;
    color: $black;
    font-size: 1em;

    text-align: center;
    line-height: 50px;
    letter-spacing: -0.05em;
    transition: 0.25s;
    -webkit-tap-highlight-color: transparent;
    margin-top: 200px;

    @include md {
        display: none;
    }

    p {
        margin-right: auto;
        margin-left: auto;
        font-weight: 500;
        margin-top: 0px;
        margin-bottom: 0px;
    }

    svg {
        animation: bounceUpDown 2s ease-in-out infinite;
    }
}

@keyframes bounceUpDown {
    0% {
        transform: translateY(0px);
    }

    30% {
        transform: translateY(10px);
    }

    100% {
        transform: translateY(0px);
    }
}

